--- a/energy.html
+++ b/energy.html
@@ -7,7 +7,7 @@
     <script src="energy.js"></script>
     <style>
         #boks {
-            background-color: cadetblue;
+            background-color: red;
             margin-left: auto;
             margin-right: auto;
         }
